--- a/info.yaml
+++ b/info.yaml
@@ -1,31 +1,33 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "Tyler_Hong_UWASIC_Onboarding"      # Project title
+  author:       "Tyler Hong"      # Your name
+  discord:      "TylerHong"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "Using SPI to receive the PWM register config and set the value"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     10000000       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_tyler_hong_onboarding"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
     - "project.v"
+    - "spi_peripheral.v"
+    - "pwm_peripheral.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
+  ui[0]: "sclk"
+  ui[1]: "copi"
+  ui[2]: "ncs"
   ui[3]: ""
   ui[4]: ""
   ui[5]: ""
@@ -33,24 +35,24 @@ pinout:
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "PWM output"
+  uo[1]: "PWM output"
+  uo[2]: "PWM output"
+  uo[3]: "PWM output"
+  uo[4]: "PWM output"
+  uo[5]: "PWM output"
+  uo[6]: "PWM output"
+  uo[7]: "PWM output"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "PWM output"
+  uio[1]: "PWM output"
+  uio[2]: "PWM output"
+  uio[3]: "PWM output"
+  uio[4]: "PWM output"
+  uio[5]: "PWM output"
+  uio[6]: "PWM output"
+  uio[7]: "PWM output"
 
 # Do not change!
 yaml_version: 6
